login signu routing fixes

--- a/views/blogs.handlebars
+++ b/views/blogs.handlebars
@@ -1,1 +1,42 @@
-<h4 class="mt-4 text-center text-info font-weigt-light">{{{myName}}}</h4>
+<div class="container mt-3 p-3">
+    <div class="row">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="nature.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col mb-0">
+            <div class="card">
+                <img src="nature1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Recycling is must</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="nature2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Save Forest</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="nature3.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Save Water</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
