--- a/views/bloggerRegistration.handlebars
+++ b/views/bloggerRegistration.handlebars
@@ -1,32 +1,39 @@
-<div class="container p-3 mt-2">
+<div class="container p-3 mt-4">
     <div class="row">
         <div class="col"></div>
-        <div class="col col-6">
-            <div class="alert alert-warning alert-dismissible fade show" id="alertBox" role="alert">
-                <strong>Success!</strong> {{{reg-status}}}
+        <div class="col col-6 border shadow rounded p-5 bg-white">
+            <div class="text-center text-dark font-weight-light h3">
+                Create New Account
+            </div>
+            {{#if addStatus}}
+            <div class="alert alert-dismissible alert-success fade show" id="alertBox" role="alert">
+                <div class="text-center"><span class="font-weight-light">{{{addStatusMessage}}}</span></div>
                 <button type="button" class="close" data-dismiss="alert" onclick="closeAlert()" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
+            {{/if}}
+            {{#unless addStatus}}
+            {{/unless}}
             <form action="/addUser" method="POST">
                 <div class="mb-3">
-                    <label class="col-form-label">Name:</label>
-                    <input type="text" name="name" class="form-control" id="full-name">
+                    <label class="col-form-label"><i class="far fa-address-card pr-1"></i> Name:</label>
+                    <input type="text" name="name" class="form-control" id="name">
                 </div>
                 <div class="mb-3">
-                    <label class="col-form-label">Email:</label>
-                    <input type="number" name="email" class="form-control" id="email">
+                    <label class="col-form-label"><i class="fas fa-envelope pr-1"></i> Email:</label>
+                    <input type="email" name="email" class="form-control" id="email">
                 </div>
                 <div class="mb-3">
-                    <label class="col-form-label">Enter Password:</label>
-                    <input type="password" name="mobile" class="form-control" id="recipient-name">
+                    <label class="col-form-label"><i class="fas fa-key pr-1"></i> Enter Password:</label>
+                    <input type="password" name="password" class="form-control" id="password1">
+                </div>
+                <div class="mb-4">
+                    <label class="col-form-label"><i class="fas fa-key pr-1"></i> Confirm Password:</label>
+                    <input type="password" name="password2" class="form-control" id="password2">
                 </div>
                 <div class="mb-3">
-                    <label class="col-form-label">Confirm Password:</label>
-                    <input type="number" name="password" class="form-control" id="recipient-name">
-                </div>
-                <div class="mb-3">
-                    <input type="submit" class="btn btn-primary btn-success" value="Submit">
+                    <input type="submit" class="btn btn-primary btn-outline-dark rounded-0" value="Create Account">
                 </div>
             </form>
         </div>
